--- a/index.html
+++ b/index.html
@@ -5,110 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eyes Off SLP - End Mass Surveillance</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-        }
-
-        .navbar {
-            background-color: #1a1a1a;
-            padding: 1rem 0;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .navbar-brand {
-            font-weight: 700;
-            font-size: 1.5rem;
-            letter-spacing: 1px;
-            color: #fff !important;
-        }
-
-        .nav-link {
-            margin-left: 1.5rem;
-            font-weight: 500;
-            font-size: 0.95rem;
-            transition: color 0.3s ease;
-        }
-
-        .nav-link:hover {
-            color: #4a90e2 !important;
-        }
-
-        .hero-section {
-            position: relative;
-            height: 100vh;
-            min-height: 600px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1589519160732-57fc498494f8?w=1200&h=600&fit=crop') center/cover;
-        }
-
-        .hero-content {
-            text-align: center;
-            color: white;
-            z-index: 2;
-            max-width: 800px;
-            padding: 2rem;
-        }
-
-        .hero-headline {
-            font-size: 4rem;
-            font-weight: 900;
-            letter-spacing: 2px;
-            margin-bottom: 1rem;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-            line-height: 1.1;
-        }
-
-        .hero-subtext {
-            font-size: 1.5rem;
-            font-weight: 300;
-            margin-bottom: 2rem;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
-            letter-spacing: 1px;
-        }
-
-        .cta-button {
-            background-color: #e74c3c;
-            border: none;
-            padding: 1rem 2.5rem;
-            font-size: 1.1rem;
-            font-weight: 600;
-            border-radius: 4px;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        .cta-button:hover {
-            background-color: #c0392b;
-            transform: translateY(-2px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-        }
-
-        @media (max-width: 768px) {
-            .hero-headline {
-                font-size: 2.5rem;
-            }
-
-            .hero-subtext {
-                font-size: 1.1rem;
-            }
-
-            .nav-link {
-                margin-left: 0;
-                margin-top: 0.5rem;
-            }
-
-            .hero-content {
-                padding: 1rem;
-            }
-        }
-    </style>
+    <!-- <style>
+        
+    </style> -->
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -121,16 +21,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#take-action">Take Action</a>
+                        <a class="nav-link" href="alprs.html">What Are ALPRs?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#resources">Resources</a>
+                        <a class="nav-link" href="take-action.html">Take Action</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="resources.html">Resources</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -140,9 +43,12 @@
     <!-- Hero Banner Section -->
     <section class="hero-section" id="home">
         <div class="hero-content">
-            <h1 class="hero-headline">EYES OFF SLP</h1>
-            <p class="hero-subtext">End Mass Surveillance</p>
-            <a href="#take-action" class="cta-button">Take Action</a>
+            <h1 class="hero-headline">End Mass Surveillance in St. Louis Park</h1>
+            <p class="hero-subtext">We are working to end the use of AI-powered Automated License Plate Readers (ALPRs) in St. Louis Park and protect our community's privacy.</p>
+            <div>
+                <a href="alprs.html" class="cta-button cta-button-secondary">Learn More</a>
+                <a href="take-action.html" class="cta-button">Take Action</a>
+            </div>
         </div>
     </section>
 
