--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eyes Off SLP - End Mass Surveillance</title>
+    <title>Eyes Off SLP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- <style>
         
@@ -51,6 +51,31 @@
             </div>
         </div>
     </section>
+
+    <!-- Blurb -->
+    <section class="container py-5">
+        <div class="row">
+            <div class="col-md-8 mx-auto">
+                <p class="lead text-left">
+                    By allowing these ALPR cameras to operate, St. Louis Park lets Flock Safety:
+                    <ul>
+                        <li>Own data on <strong>your</strong> vehicle and movements</li>
+                        <li>Share data with <strong>federal immigration enforcement</strong>.</li>
+                        <li>Build an <strong>AI</strong> surveillance network across the Twin Cities.</li>
+                        <li>Raise significant privacy concerns for <strong>all</strong> community members.</li>
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Map Section -->
+    <section class="container py-5">
+        <h2 class="mb-4 text-center">See Where Flock ALPRs are Installed</h2>
+         <iframe src="https://deflock.me/map?fullscreen=true#map=13/44.948282/-93.373146/st%2520louis%2520park%2520mn" width="100%" height="600" style="border: none;"></iframe> 
+        <!-- <p class="text-center">Stay informed and get involved to help us protect privacy rights in St. Louis Park.</p>
+        <div class="text-center mt-4">
+            <a href="take-action.html" class="cta-button">Get Involved</a>
+        </div> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
